Fixing strange issue with input being not interactive on mobile

--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -6,7 +6,7 @@
   font-family: $serif;
   font-size: ms(0);
 
-  user-select: none;
+  user-select: text;
 
   min-width: 220px;
 }
